# GHCLetin

./: GHCLetin.cabal
src/: Main.hs
src/GHCLetin/Ir/: CoreToIr.hs  Id.hs  Syn.hs  Type.hs
src/GHCLetin/Letin/: Type.hs
