name: GHCLetin
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) 2015 Łukasz Szpakowski
maintainer: Łukasz Szpakowski
description: Haskell compiler based on GHC for Letin virtual machine.
author: Łukasz Szpakowski
data-dir: .
 
library
    build-depends: QuickCheck -any, array -any, base -any,
                   containers -any, ghc >=7.6.1
    exposed-modules: GHCLetin.Ir.CoreToIr GHCLetin.Ir.Id
                     GHCLetin.Ir.Syn GHCLetin.Ir.Type GHCLetin.Letin.Type
    exposed: True
    buildable: True
    cpp-options: -DTEST=1
    hs-source-dirs: src
 
executable GHCLetin
    build-depends: QuickCheck -any, array -any, base -any,
                   containers -any, ghc >=7.6.1
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: GHCLetin.Ir.Syn GHCLetin.Ir.CoreToIr
                   GHCLetin.Ir.Type GHCLetin.Ir.Id GHCLetin.Letin.Type
 
test-suite test-GHCLetin
    build-depends: QuickCheck -any, array -any, base -any,
                   containers -any, ghc >=7.6.1
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DTEST=1
    hs-source-dirs: src